--- a/src/express/templates/articles/new-post.pug
+++ b/src/express/templates/articles/new-post.pug
@@ -5,38 +5,40 @@ block content
     section.modal.modal--flex
       .popup.popup--new-publication.popup--flex
         .new-publication
-          .new-publication__header
-            h1 Новая публикация
-            .new-publication__date-form
-              h3 Дата публикации
-              form(action='#', method='POST')
-                .new-publication__date-block
-                  label(for='new-publication-date', aria-label='Календарь')
-                  input#new-publication-date(type='text', name='login', placeholder='21.03.2019')
-            button.new-publication__button.button.button--colored(type='submit') Опубликовать
-          button.popup__button.button.button--popup-close(type='button', aria-label='Закрыть окно')
-            | Закрыть
-            | окно
-          .new-publication__form.form
-            form(action='', method='post')
+          form(action='', method='POST', enctype='multipart/form-data')
+            .new-publication__header
+              h1 Новая публикация
+              .new-publication__date-form
+                h3 Дата публикации
+                .new-publication__date-form-division
+                  .new-publication__date-block
+                    label(for='new-publication-date', aria-label='Календарь')
+                    input#new-publication-date(type='text', name='created', placeholder='21.03.2019')
+              button.new-publication__button.button.button--colored(type='submit') Опубликовать
+            button.popup__button.button.button--popup-close(type='button', aria-label='Закрыть окно')
+              | Закрыть
+              | окно
+            .new-publication__form.form
               .form__wrapper.form__wrapper--intro
                 .form__field
                   label
-                    input(type='text', placeholder='Заголовок', name='title', required='')
+                    input(type='text', placeholder='Заголовок', name='title', value=article.title || '', required='')
                 .form__field.form__field--post-image
                   label
-                    input#image-name-field(type='text', placeholder='Фотография', name='picture', readonly='')
+                    input#image-name-field(type='text', value='', placeholder='Фотография', name='picture', readonly='')
                   .form__image-loader.form__image-loader--publication
                     label
-                      input.visually-hidden(type='file')
+                      input.visually-hidden(type='file', name='picture')
                       | Обзор
-                a.new-publication__form-link.button.button--transparent(href='#') Добавить категорию
+                  button.button.button--transparent Удалить
+                // @todo реализовать логику выбора категорий (позже)
+                a.new-publication__form-link.button.button--transparent(href='/categories') Добавить категорию
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='1', placeholder='Анонс публикации' name='announce')
+                    textarea(rows='2', placeholder='Анонс публикации', name='announce', required='')
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='1', placeholder='Полный текст публикации', name='fullText')
+                    textarea(rows='5', placeholder='Полный текст публикации', name='fullText')
       .modal__overlay
 
