--- a/src/express/templates/articles/new-post.pug
+++ b/src/express/templates/articles/new-post.pug
@@ -13,7 +13,7 @@ block content
                 .new-publication__date-form-division
                   .new-publication__date-block
                     label(for='new-publication-date', aria-label='Календарь')
-                    input#new-publication-date(type='text', name='created', placeholder='21.03.2019')
+                    input#new-publication-date(type='text', name='created', placeholder='21.03.2019', value=article.created || '')
               button.new-publication__button.button.button--colored(type='submit') Опубликовать
             button.popup__button.button.button--popup-close(type='button', aria-label='Закрыть окно')
               | Закрыть
@@ -36,9 +36,9 @@ block content
               .form__wrapper.form__wrapper--text
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='2', placeholder='Анонс публикации', name='announce', required='')
+                    textarea(rows='2', placeholder='Анонс публикации', name='announce', required='')=article.announce || ''
                 .form__field.form__field--publication-text
                   label
-                    textarea(rows='5', placeholder='Полный текст публикации', name='fullText')
+                    textarea(rows='5', placeholder='Полный текст публикации', name='fullText')=article.fullText || ''
       .modal__overlay
 
